# eTilbudsavis-CLI

./: .gitignore  Cargo.toml  README.md  flake.nix  index.html  shell.nix  style.css
elm-stuff/0.19.1/: Main.elmi  Main.elmo
src/: Main.elm  dealer.rs  deserialize.rs  main.rs  test.rs
src/output/: mod.rs  rss.rs  table.rs
src/requests/: dealer.rs  deserialize.rs  mod.rs  offer.rs  userdata.rs
