[package]
name = "etilbudsavis-cli"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono ={ version = "0.4.24", default-features = false, features = ["serde","clock"] }
clap = { version = "4.2.1", features = ["cargo", "color", "derive"] }
clap_complete = "4.5.38"
clap_complete_nushell = "4.5.4"
comfy-table = "7.1.1"
dirs = "6.0.0"
futures = "0.3.27"
reqwest = {version = "0.12.14", features = ["json"]}
serde = {version = "1.0.158", features = ["derive"]}
serde_json = "1.0.94"
strum = { version = "0.27.1", features = ["derive","strum_macros"] }
tokio = {version = "1.26.0", features = ["full"]}
