[package]
name = "etilbudsavis-cli"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
chrono ={ version = "0.4.42", default-features = false, features = ["serde","clock"] }
clap = { version = "4.5.48", features = ["cargo", "color", "derive"] }
clap_complete = "4.5.58"
clap_complete_nushell = "4.5.8"
comfy-table = "7.1.1"
dirs = "6.0.0"
futures = "0.3.31"
reqwest = {version = "0.12.23", features = ["json", "rustls-tls"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive","strum_macros"] }
tokio = {version = "1.47.1", features = ["full"]}

[[bin]]
name = "etb"
path = "src/main.rs" # Or the path to your binary's source file
